# smath

./: .gitignore  CMakeLists.txt  README.md  export-config.json  main.py  main.sh  run.sh
.cache/clangd/index/: main.cpp.7FDF09B9D6DCA5D4.idx  message.hpp.07B125714F6A7004.idx  smath.hpp.FD2693708494FE07.idx  vec3.hpp.25D9460A432F36F8.idx  vec3_test.cpp.B8D19BF65AB60235.idx
include/: message.h  message.hpp
include/smath/: CMakeLists.txt  basic.hpp  common.hpp  mat.hpp  quat.hpp  smath.hpp  vec.hpp  vec3.hpp
test/: main.cpp  mat_test.cpp  quat_test.cpp  test_tool.hpp  vec3_test.cpp  vec_performance_test.cpp  vec_test.cpp
